# src/shared/dtos/IRepositoryStatsDTO.ts
@@ -1,0 +1,6 @@
+export default interface IRepositoryStatsDTO {
+  count: number;
+  continuities?: string[];
+  designations: string[];
+  last_updated: Date | null;
+}
